[gd_scene load_steps=2 format=3 uid="uid://cnf6k5bcyries"]

[ext_resource type="Script" path="res://list_node_script.gd" id="1_g4bu8"]

[node name="ListNode" type="PanelContainer"]
custom_minimum_size = Vector2(200, 281)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_g4bu8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.2447, 0.296119, 0.338813, 1)

[node name="MainContainer" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="Head" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="NameEdit" type="LineEdit" parent="MainContainer/Head"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "name"

[node name="VBoxContainer" type="MenuButton" parent="MainContainer/Head"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = ":"
item_count = 1
popup/item_0/text = "remove"

[node name="Buttons" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button" type="Button" parent="MainContainer/Buttons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "+"

[node name="ItemContainer" type="BoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical = true
